[Appointments] Se agrega QueryParam a findAllToday
